--- a/FastFoodStore/pom.xml
+++ b/FastFoodStore/pom.xml
@@ -11,4 +11,15 @@
         <maven.compiler.target>19</maven.compiler.target>
         <exec.mainClass>com.fastfoodstore.test.FastFoodStore</exec.mainClass>
     </properties>
+    
+    <dependencies>
+        <!-- https://mvnrepository.com/artifact/com.mysql/mysql-connector-j -->
+        <dependency>
+            <groupId>com.mysql</groupId>
+            <artifactId>mysql-connector-j</artifactId>
+            <version>8.0.32</version>
+        </dependency>
+    </dependencies>
+
+    
 </project>
