--- a/FastFoodStore/pom.xml
+++ b/FastFoodStore/pom.xml
@@ -52,6 +52,17 @@
             <artifactId>timingframework</artifactId>
             <version>1.0</version>
         </dependency>
+        
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi</artifactId>
+            <version>5.0.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi-ooxml</artifactId>
+            <version>5.0.0</version>
+        </dependency>
 
 
 
