--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,7 @@
+### Java ###
+# Compiled class file
+*.class
 /FastFoodStore/nbproject/private/
 /car/nbproject/private/
 /car/build/
-/FastFoodStore/targer/classes/
+
